--- a/App/Dedale/www/index.html
+++ b/App/Dedale/www/index.html
@@ -14,6 +14,8 @@
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#4e8ef7">
 
+  <script src="http://maps.google.com/maps/api/js?key=AIzaSyBCdv_5LCCqnFtyK2gjl1guaQ837pezQUM" async defer></script>
+
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
 
