--- a/App/Dedale/src/pages/tools/tools.html
+++ b/App/Dedale/src/pages/tools/tools.html
@@ -7,12 +7,15 @@
 <ion-header>
 
   <ion-navbar>
+  	<button ion-button menuToggle>
+		<ion-icon name="menu"></ion-icon>
+	</button>
     <ion-title>ToolsPage</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
-
+<ion-content>
+	<h3>Liste d'outils pour le jeu</h3>
 </ion-content>
