--- a/App/Dedale/src/pages/tools/tools.html
+++ b/App/Dedale/src/pages/tools/tools.html
@@ -21,7 +21,7 @@
 
 	<ul class="toolsList">
 		<li>
-			<button (click)='lauchToolsDes()'>
+			<button (click)='lauchToolsDice()'>
 				<i class="fa fa-scissors" aria-hidden="true"></i>
 				<span>Dés</span>
 			</button>
@@ -36,7 +36,7 @@
 			<button (click)='lauchTools()'>
 				<i class="fa fa-scissors" aria-hidden="true"></i>
 				<span>Dés</span>
-			</button>	
+			</button>
 		</li>
 	</ul>
 </ion-content>
