--- a/App/Dedale/src/pages/tools/tools.html
+++ b/App/Dedale/src/pages/tools/tools.html
@@ -20,22 +20,10 @@
 	<h2>Liste d'outils pour le jeu</h2>
 
 	<ul class="toolsList">
-		<li>
-			<button (click)='lauchToolsDice()'>
-				<i class="fa fa-scissors" aria-hidden="true"></i>
-				<span>Dés</span>
-			</button>
-		</li>
-		<li>
-			<button (click)='lauchToolsClock()'>
-				<i class="fa fa-clock-o" aria-hidden="true"></i>
-				<span>Chrono</span>
-			</button>
-		</li>
-		<li>
-			<button (click)='lauchTools()'>
-				<i class="fa fa-scissors" aria-hidden="true"></i>
-				<span>Dés</span>
+		<li *ngFor="let tool of tools">
+			<button (click)='openTools( tool.component )'>
+				<i class="{{ tool.icon }}" aria-hidden="true"></i>
+				<span>{{ tool.title }}</span>
 			</button>
 		</li>
 	</ul>
