--- a/Site/Dedale_front/index.html
+++ b/Site/Dedale_front/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>front_dedale</title>
+    <title>dedale</title>
   </head>
   <body>
     <div id="app"></div>
